# uav_reinforcement_learning_control

./: .gitignore  README.md  evaluate.py  pid_controller.py  pid_gains.json  pid_gains_x500.json  test_rate_tracking.py  test_yaw_step.py  train.py  train.sh
envs/: __init__.py  hover_env.py  rate_wrapper.py  wrappers.py
model/drone/: drone.xml  x500.xml
ros2_ws/src/rl_drone_control/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/rl_drone_control/launch/: policy_launch.py
ros2_ws/src/rl_drone_control/rl_drone_control/: observation_builder.py  policy_node.py  state_estimator.py
utils/: __init__.py  drone_config.py  state.py  trajectories.py
